--- a/orgware.org
+++ b/orgware.org
@@ -1,4 +1,4 @@
-# -*- orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; orgstrap-block-checksum: 5301b4e7124833442b38bb820dae75304f9a064aab60392e8acc2a7c69d37f48; -*-
+# -*- orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; orgstrap-block-checksum: 7e836f4992bca02efe323764607af9a1783ebb8e59beb539ba5298743f1fcf22; -*-
 # [[orgstrap][jump to the orgstrap block for this file]]
 #+title: Orgware: Tooling for interactive Org files
 
@@ -585,6 +585,23 @@ the string output of the process.
       (if (not (= 0 return-code))
           (error "code: %s stdout: %S" return-code string)
         string))))
+
+(defun ow--default-sentinel (process message)
+  "An example sentinel for async processes."
+  (message "%s %s" message (process-status process))
+  (with-current-buffer (process-buffer process)
+    (message "%S" (buffer-string))))
+
+(cl-defun ow-run-command-async (command &rest args &key sentinel &allow-other-keys)
+  "Reminder that kwargs must come before rest when calling a cl-defun."
+  (let* ((args (or (and (memq :sentinel args)
+                        (cl-remove-if (lambda (x) (or (not x) (eq x :sentinel)))
+                                      (plist-put args :sentinel nil)))
+                   args))
+         (process (apply #'start-process (format "process-%s" command) (format "process-buffer-%s" command) command args)))
+    (when sentinel
+      (set-process-sentinel process sentinel))))
+
 #+end_src
 ** cli and orthauth
 # see also [[file:~/git/git-share/README.org::parse-args-cli][git-share parse args]]
@@ -838,6 +855,19 @@ All errors are silenced."
           (re-search-forward "^HTTP.+OK$"))
       (error nil))))
 
+(defun ow--results-silent (fun &rest args)
+  "Whoever named the original version of this has a strange sense of humor."
+  ;; so :results silent, which is what org babel calls between vars
+  ;; set automatically is completely broken when one block calls another
+  ;; there likely needs to be an internal gensymed value that babel blocks
+  ;; can pass to eachother so that a malicious user cannot actually slience
+  ;; values, along with an option to still print, but until then we have this
+  (let ((result (car args))
+        (result-params (cadr args)))
+    (if (member "silent" result-params)
+        result
+      (apply fun args))))
+
 (defun ow-babel-eval (block-name &optional universal-argument)
   "Use to confirm running a chain of dependent blocks starting with BLOCK-NAME.
 This retains single confirmation at the entry point for the block."
@@ -850,9 +880,12 @@ This retains single confirmation at the entry point for the block."
         ;; `ow-confirm-once' is being used being called an infinite
         ;; number of times and blowing the stack
         (org-babel-goto-named-src-block block-name)
-        (org-babel-execute-src-block)))))
+        (unwind-protect
+            (progn
+              (advice-add #'org-babel-insert-result :around #'ow--results-silent)
+              (org-babel-execute-src-block))
+          (advice-remove #'org-babel-insert-result #'ow--results-silent))))))
 #+end_src
-
 
 * Emacs sandbox
 Not quite a sandbox yet, but at least a clean slate.
@@ -999,5 +1032,5 @@ persistent to prevent prompt fatigue.
 
 ** Local variables :ARCHIVE:
 # Local Variables:
-# eval: (progn (setq-local orgstrap-min-org-version "8.2.10") (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string< need actual) (string= need actual) (error "Your Org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.1 (body) (let (print-quoted print-length print-level) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func orgstrap-norm-func-name)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm #'orgstrap-norm-embd)) (defun orgstrap-org-src-coderef-regexp (_fmt &optional label) (let ((fmt org-coderef-label-format)) (format "\\([:blank:]*\\(%s\\)[:blank:]*\\)$" (replace-regexp-in-string "%s" (if label (regexp-quote label) "\\([-a-zA-Z0-9_][-a-zA-Z0-9_ ]*\\)") (regexp-quote fmt) nil t)))) (unless (fboundp #'org-src-coderef-regexp) (defalias 'org-src-coderef-regexp #'orgstrap-org-src-coderef-regexp)) (defun orgstrap--expand-body (info) (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1)))) (defun orgstrap--confirm-eval-portable (lang _body) (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (body-normalized (orgstrap-norm body)) (content-checksum (intern (secure-hash orgstrap-cypher body-normalized)))) (eq orgstrap-block-checksum content-checksum))))) (defalias 'orgstrap--confirm-eval #'orgstrap--confirm-eval-portable) (let ((ocbe org-confirm-babel-evaluate)) (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (unwind-protect (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe) (org-set-startup-visibility))))
+# eval: (progn (setq-local orgstrap-min-org-version "8.2.10") (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string< need actual) (string= need actual) (error "Your Org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.1 (body) (let (print-quoted print-length print-level) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func orgstrap-norm-func-name)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm #'orgstrap-norm-embd)) (defun orgstrap-org-src-coderef-regexp (_fmt &optional label) (let ((fmt org-coderef-label-format)) (format "\\([:blank:]*\\(%s\\)[:blank:]*\\)$" (replace-regexp-in-string "%s" (if label (regexp-quote label) "\\([-a-zA-Z0-9_][-a-zA-Z0-9_ ]*\\)") (regexp-quote fmt) nil t)))) (unless (fboundp #'org-src-coderef-regexp) (defalias 'org-src-coderef-regexp #'orgstrap-org-src-coderef-regexp)) (defun orgstrap--expand-body (info) (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1)))) (defun orgstrap--confirm-eval-portable (lang _body) (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (body-normalized (orgstrap-norm body)) (content-checksum (intern (secure-hash orgstrap-cypher body-normalized)))) (eq orgstrap-block-checksum content-checksum))))) (unless (fboundp #'orgstrap--confirm-eval) (defalias 'orgstrap--confirm-eval #'orgstrap--confirm-eval-portable)) (let (enable-local-eval) (vc-find-file-hook)) (let ((ocbe org-confirm-babel-evaluate) (obs (org-babel-find-named-block "orgstrap"))) (if obs (unwind-protect (save-excursion (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (goto-char obs) (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe) (org-set-startup-visibility)) (warn "No orgstrap block."))))
 # End:
